<resources>
    <string name="app_name">LoginActivity</string>
    <string name="welcome">Velkomin(n)</string>
    <string name="findyourname">Skráðu þig inn og finndu rétta nafnið!</string>
    <string name="hint_email">Netfang</string>
    <string name="hint_password">Lykilorð</string>
    <string name="btnLogin">Innskráning</string>
    <string name="btnSignup">Nýskráning</string>
    <string name="needAccount">Ekki með aðgang?</string>
    <string name="loginError">Innskráning tókst ekki</string>
    <string name="nafnaneistar_logo_elephant">Nafnaneistar Logo Elephant</string>
    <string name="loginFailed">Innskráning Mistókst!</string>
    <string name="loginSuccess">Innskráning Tókst!</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="hint_search_name">Sláðu inn nafn</string>
    <string name="btnSearchName">Leita</string>
    <string name="name_search_failed">Ekki tókst að leita að nafni</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="hintNAme">Nafn</string>
    <string name="DontNeedAccount">Ég er með aðgang?</string>
    <string name="signup">Nýskráning</string>
    <string name="errorEmptyStrings">Reitir mega ekki vera tómir</string>
    <string name="errorInvalidEmail">Netfang ekki gilt</string>
    <string name="signupSuccess">Nýskráning Tókst!</string>
    <string name="signupFailed">Nýskráning Mistókst</string>
    <string name="title_activity_test_activyti">testActivyti</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_swipte" translatable="false">SwipteActivity</string>
    <string name="title_activity_swipe" translatable="false">swipelabel</string>
    <string name="navMenu">Valmynd</string>
    <string name="navbarSearchname">Leita af Nafni</string>
    <string name="navbarSwipe">Velja Nöfn</string>
    <string name="navbarvviewliked">Valin Nöfn</string>
    <string name="navbarLinkPartner">Tengjast Öðrum</string>
    <string name="navbarSettings">Stillingar</string>
    <string name="tvLinkPartner">Viltu tengja nafna listann þinn við einhvern annann? Skrifaðu póstfangið og tengist saman</string>
    <string name="btnLink">Tengjast</string>
    <string name="linkError">Ekki tókst að tengjast netfangi</string>
    <string name="tvConnected">Þú ert tengd/ur við</string>
    <string name="sharedPrefUsername" translatable="false">prefUsername</string>
    <string name="intentBooleanClsoe">close</string>
    <string name="hintOption">Eyða</string>
    <string name="linkSuccess">Tenging tókst</string>
    <string name="navLogout">Skrá út</string>
    <string name="cbMale">Karlkyns</string>
    <string name="cbFemale">Kvenkyns</string>
    <string name="viewlikedapprovednamesstats">Samþykkt X nöfn</string>
    <string name="viewlikedrejectedstats">Hafnað x nöfnum</string>
    <string name="viewlikednamesleftstats">X nöfn eftir</string>
    <string name="viewLikedPlaceholderName">Nafn</string>
    <string name="getting_data">Sæki upplýsingar...</string>
    <string name="viewlikedmenu_yfirlit">Yfirlit</string>
    <string name="viewlikedmenuCombinedLists">Skoða Sameiginlega lista</string>
    <string name="viewlikedmenu_ratename">Gefa Nafni Einkunn</string>
    <string name="viewlikedmenugetNamesbyRating">Skoða Nöfn eftir einkunn</string>
    <string name="viewlikednamecombo">Nafna Samsetningar</string>
    <string name="errorRetrievingData">Ekki tókst að sækja gögn</string>
    <string name="vtViewLikedNameStatsTitleMale">Karlkynsnöfn</string>
    <string name="tvViewLikeStatNameFemaleTitle">Kvenkynsnöfn</string>
    <string name="combonameHintLastName">Eftirnafn</string>
    <string name="female">Kvenkyns</string>
    <string name="Comboname_getName">Fá Nafn</string>
    <string name="comboname_name_and_middle">Fá Nafn &amp; Millinafn </string>
    <string name="settu_inn_eftirnafn_og_f_u_upp_stungur_fyrir_nafn">Settu inn eftirnafn og fáðu uppástungur fyrir nafn</string>
    <string name="systemError">Kerfisvilla...</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="viewlikedComboList">Skoða Sameiginlegan lista</string>
    <string name="errorGettingPartners">Villa við að ná í gögn</string>
    <string name="delete">Eyða</string>
    <string name="placeholderHearts">🤍🤍🤍🤍🤍</string>
    <string name="goBack">Til Baka</string>
    <string name="GroupByNameOrRating">Flokka eftir: Nafni/Einkunn</string>
    <string name="NoComboNames">Engin Sameiginleg Nöfn</string>
    <string name="SwipeMoreNames">Skoða fleiri nöfn?</string>
    <string name="operationSuccess">Aðgerð Tókst</string>
    <string name="ShowGenderNames">Sýna KVK/KK Nöfn</string>
    <string name="FetchingList">Sæki lista</string>
    <string name="NoNameYet">Enginn Nöfn kominn</string>
    <string name="please_choose_list">Vinsamlega veldu lista</string>
    <string name="title_activity_change_name">ChangeName</string>
    <string name="title_activity_update_info">UpdateInfoActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>