<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navSwipe"
        android:icon="@drawable/ic_swipe"
        android:title="@string/navbarSwipe" />

    <item
        android:id="@+id/navViewLiked"
        android:icon="@drawable/ic_heart"
        android:title="@string/navbarvviewliked" />


    <item
        android:id="@+id/navSearch"
        android:icon="@drawable/ic_search"
        android:title="@string/navbarSearchname" />

    <item
        android:id="@+id/navLinkPartner"
        android:icon="@drawable/ic_partner"
        android:title="@string/navbarLinkPartner"/>

    <item
        android:id="@+id/navMenu"
        android:icon="@drawable/ic_menu"
        android:title="@string/navMenu" />

</menu>