<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>    <variable
        name="user"
        type="xyz.nafnaneistar.model.User"/></data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context="xyz.nafnaneistar.activities.SignupActivity">

        <TextView
            android:id="@+id/tvError"
            android:layout_width="299dp"
            android:layout_height="36dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/loginError"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_error"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPassword" />

        <Button
            android:id="@+id/btnSignup2"
            style="@style/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSignup"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPassword"
            app:layout_constraintVertical_bias="0.212" />

        <Button
            android:id="@+id/btnLogin2"
            style="@style/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnLogin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.215"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/btnSignup2"
            app:layout_constraintVertical_bias="0.242" />

        <TextView
            android:id="@+id/textView3"
            style="@style/h2"
            android:layout_width="158dp"
            android:layout_height="27dp"
            android:layout_marginStart="56dp"
            android:text="@string/DontNeedAccount"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSignup2"
            app:layout_constraintVertical_bias="0.228" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="251dp"
            android:layout_height="44dp"
            android:autofillHints=""
            android:background="@drawable/edittext_rounded"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/hintNAme"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.093" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="251dp"
            android:layout_height="44dp"
            android:autofillHints=""
            android:background="@drawable/edittext_rounded"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etName"
            app:layout_constraintVertical_bias="0.051" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="251dp"
            android:layout_height="44dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:background="@drawable/edittext_rounded"
            android:backgroundTint="@color/white"

            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etEmail" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="186dp"
            android:layout_height="108dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/nafnaneistar_logo_elephant"
            android:src="@drawable/fill"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView"
            style="@style/h1"
            android:text="@string/welcome"
            android:textAllCaps="false"
            android:textColor="@color/font"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>